<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.epam.tc</groupId>
    <artifactId>anastasiia_egorova</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <testng.configs.path>${project.build.testOutputDirectory}/testng</testng.configs.path>
        <testng.suite.file>${testng.configs.path}/defaultsuite.xml</testng.suite.file>
        <testng.suite.file>${testng.configs.path}/generalsuite.xml</testng.suite.file>
        <testng.suite.file>${testng.configs.path}/multdivsuite.xml</testng.suite.file>
        <testng.suite.file>${testng.configs.path}/jdi.light.firstsuite.xml</testng.suite.file>
        <testng.suite.file>${testng.configs.path}/jdi.light.secondsuite.xml</testng.suite.file>
        <testng.suite.file>${testng.configs.path}/jdi.light.hw3.bonussuite.xml</testng.suite.file>
        <testng.suite.file>${testng.configs.path}/homework4.xml</testng.suite.file>
        <testng.suite.file>${testng.configs.path}/homework5.xml</testng.suite.file>
        <testng.suite.file>${testng.configs.path}/homework6.xml</testng.suite.file>
        


        <checkstyle.version>8.42</checkstyle.version>
        <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>

        <maven-surefire-plugin.suiteXmlFile>${project.build.testOutputDirectory}/testng/defaultsuite.xml</maven-surefire-plugin.suiteXmlFile>
        <maven-surefire-plugin-general.suiteXmlFile>${project.build.testOutputDirectory}/testng/generalsuite.xml
        </maven-surefire-plugin-general.suiteXmlFile>
        <maven-surefire-plugin-multdiv.suiteXmlFile>${project.build.testOutputDirectory}/testng/multdivsuite.xml
        </maven-surefire-plugin-multdiv.suiteXmlFile>

        <testng.version>7.4.0</testng.version>

        <assertj-core.version>3.4.1</assertj-core.version>

        <selenium-java.version>3.141.59</selenium-java.version>
        <webdrivermanager.version>4.4.3</webdrivermanager.version>

        <allure.version>2.13.2</allure.version>
        <aspectj.version>1.9.5</aspectj.version>

        <cucumber.version>6.11.0</cucumber.version>
        <lombok.version>1.18.20</lombok.version>
    </properties>

     <build>
         <plugins>

             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
                 <configuration>
                     <source>11</source>
                     <target>11</target>
                 </configuration>
             </plugin>

             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-install-plugin</artifactId>
                 <version>2.5.2</version>
                 <executions>
                     <execution>
                         <phase>initialize</phase>
                         <goals>
                             <goal>install-file</goal>
                         </goals>
                         <configuration>
                             <groupId>com.calculator</groupId>
                             <artifactId>calculator-app</artifactId>
                             <version>1.0</version>
                             <packaging>jar</packaging>

                             <file>${basedir}/lib/calculator-1.0.jar</file>

                         </configuration>
                     </execution>
                 </executions>
             </plugin>

             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
                 <configuration>
                     <argLine>
                         --illegal-access=permit
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                     </argLine>
                     <suiteXmlFiles>
                         <suiteXmlFile>${testng.suite.file}</suiteXmlFile>
                    </suiteXmlFiles>
                </configuration>
                 <dependencies>
                     <dependency>
                         <groupId>org.aspectj</groupId>
                         <artifactId>aspectjweaver</artifactId>
                         <version>${aspectj.version}</version>
                     </dependency>
                 </dependencies>
            </plugin>


            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${maven-checkstyle-plugin.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>${checkstyle.version}</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <configLocation>
                        <!--  pay attention to use exact url for checkstyle plugin ruleset  -->
                        https://raw.githubusercontent.com/DmitryKhodakovsky/epam-training-center-code-checkers-configurations/main/checkstyle/checkstyle.xml
                    </configLocation>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                    <consoleOutput>true</consoleOutput>
                    <failsOnError>true</failsOnError>
                    <linkXRef>false</linkXRef>
                </configuration>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

    <profiles>

        <profile>
            <id>calculator-default-profile</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <testng.suite.file>${testng.configs.path}/defaultsuite.xml</testng.suite.file>
            </properties>
        </profile>

        <profile>
            <id>calculator-general-profile</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <properties>
                <testng.suite.file>${testng.configs.path}/generalsuite.xml</testng.suite.file>
            </properties>
        </profile>

        <profile>
            <id>calculator-mult-div-profile</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <properties>
                <testng.suite.file>${testng.configs.path}/multdivsuite.xml</testng.suite.file>
            </properties>
        </profile>

      <profile>
        <id>homework2</id>
        <activation>
          <activeByDefault>false</activeByDefault>
        </activation>
        <properties>
          <testng.suite.file>${testng.configs.path}/jdi.light.firstsuite.xml</testng.suite.file>
        </properties>
      </profile>

        <profile>
            <id>homework3</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <properties>
                <testng.suite.file>${testng.configs.path}/jdi.light.secondsuite.xml</testng.suite.file>
            </properties>
        </profile>

        <profile>
            <id>homework3bonus</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <properties>
                <testng.suite.file>${testng.configs.path}/jdi.light.hw3.bonussuite.xml</testng.suite.file>
            </properties>
        </profile>

        <profile>
            <id>homework4</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <properties>
                <testng.suite.file>${testng.configs.path}/homework4.xml</testng.suite.file>
            </properties>
        </profile>

      <profile>
          <id>homework5</id>
          <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
           <properties>
               <testng.suite.file>${testng.configs.path}/homework5.xml</testng.suite.file>
         </properties>
        </profile>
                
      
        <profile>
            <id>homework6</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
           <properties>
                <testng.suite.file>${testng.configs.path}/homework6.xml</testng.suite.file>
           </properties>
        </profile>
          
    </profiles>


    <dependencies>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj-core.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.calculator</groupId>
            <artifactId>calculator-app</artifactId>
            <version>1.0</version>
        </dependency>

        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${selenium-java.version}</version>
        </dependency>

        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>${webdrivermanager.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-testng</artifactId>
            <version>${allure.version}</version>
        </dependency>

        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-testng</artifactId>
            <version>${cucumber.version}</version>
        </dependency>

        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>${cucumber.version}</version>
        </dependency>

        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>${webdrivermanager.version}</version>
            <scope>compile</scope>
         </dependency>
      
      <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>

    </dependencies>

    <reporting>
        <excludeDefaults>true</excludeDefaults>
        <plugins>
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>2.10.0</version>
                <configuration>
                    <reportVersion>${allure.version}</reportVersion>
                </configuration>
            </plugin>
        </plugins>
    </reporting>

</project>